<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RemovePinActivity">

    <ImageButton
        android:id="@+id/backButton"
        style="@style/Theme.SimpleTasks.BackButton"
        android:layout_marginStart="@dimen/sidesPadding"
        android:layout_marginTop="@dimen/sidesPadding"
        android:contentDescription="@string/back"
        android:onClick="onBackClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sidesPadding"
        android:layout_marginEnd="@dimen/sidesPadding"
        android:text="@string/title_remove_pin"
        android:textAlignment="center"
        android:textColor="?colorOnBackground"
        android:textSize="@dimen/h2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/backButton" />

    <TextView
        android:id="@+id/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sidesPadding"
        android:maxEms="15"
        android:paddingStart="@dimen/elementPadding"
        android:paddingEnd="@dimen/elementPadding"
        android:text="@string/remove_pin_explanation"
        android:textAlignment="center"
        android:textColor="?hintTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />


    <TextView
        android:id="@+id/delete_pin_intro_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sidesPadding"
        android:maxEms="15"
        android:text="@string/remove_pin_intro_warning_more_pins"
        android:textAlignment="center"
        android:textColor="?colorError"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/intro" />

    <EditText
        android:id="@+id/pin_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sidesPadding"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/remove_pin_hint"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="?hintTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_pin_intro_warning" />

    <TextView
        android:id="@+id/pin_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sidesPadding"
        android:maxEms="15"
        android:text="@string/pin_not_found"
        android:textAlignment="center"
        android:textColor="?colorError"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pin_input" />

    <Button
        android:id="@+id/removePinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sidesPadding"
        android:layout_marginTop="@dimen/sidesPadding"
        android:layout_marginEnd="@dimen/sidesPadding"
        android:backgroundTint="?colorPrimary"
        android:onClick="onRemovePinClicked"
        android:text="@string/remove_pin"
        android:textColor="?colorOnPrimary"
        android:textSize="@dimen/p"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin_error" />

</androidx.constraintlayout.widget.ConstraintLayout>