...
    <string name="skip_task">Skip Task</string>
    <string name="schedule_task">Schedule Task</string>
    <string name="task_image">Task Image</string>
    <string name="task_step_image">Task Step Image</string>
    <string name="add_task_step">Add Task Step</string>
    <string name="login_hint">Log in to gain access to edit tasks</string>
    <string name="open_settings">Open settings</string>
    <string name="save">Save</string>
    <string name="task_title_hint">Task title</string>
    <string name="type">Type: %1$s</string>
    <string name="drag_task">Drag Task</string>
    <string name="plan_next_execution">Plan next execution</string>
    <string name="current_next_execution">Next execution: %1$s</string>
...
    <string name="stop_recording">Stop Recording</string>
    <string name="redo_image">New Photo</string>
    <string name="recording_in_progress">Recording in progress</string>
    <string name="playing_in_progress">Playing a recording</string>
    <string name="no_image">No title image set.</string>
    <string name="pin_not_found">This PIN does not exist</string>
    <string name="invalid_pin">PIN is not valid</string>
    <string name="unknown_error_msg">Something went wrong. Please try again later.</string>
    <string name="change_language_settings">Change language</string>
    <string name="language_settings">Language settings</string>
    <string name="no_pin_set_explanation">Currently no PIN set!</string>
    <string name="not_logged_in_explanation">You are currently not logged in!</string>
    <string name="title_report_problem">Report your problem</string>
    <string name="report_problem_explanation">You have encountered a problem and are stuck? No worries, you can write your problem here and use the button below to send it!</string>
    <string name="report_problem_send_button">Send problem</string>
    <string name="report_problem_abort">Back to task</string>
    <string name="no_problem_stated">Please describe your problem first!</string>
    <string name="problem_statement_additional_information">Additional Information on the task:\nTask title: %1$s\nStep title: %2$s\nStep index: %3$d</string>
    <string name="cancel_popup">Cancel</string>
    <string name="skip_task_popup">Skip Task</string>
    <string name="accept_info_popup">Okay</string>
    <string name="show_pin_popup">Do you want to add %1$s as a new PIN?</string>
    <string name="pin_sent_popup">A new PIN was successfully sent to %1$s!</string>
    <string name="confirm_delete_pin_popup">Are you sure that you want to delete this PIN?</string>
    <string name="pin_deletion_confirmation">The PIN was deleted!</string>
    <string name="video" translatable="false">Video</string>
    <string name="audio" translatable="false">Audio</string>
...
