...
        android:id="@+id/fragmentContainerTaskStep_taskGuide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/sidesPadding"
        android:layout_marginEnd="@dimen/sidesPadding"
        android:layout_marginBottom="@dimen/elementPadding"
        app:layout_constraintBottom_toTopOf="@+id/b_taskstep_problem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv_task_progress_container" />

    <Button
        android:id="@+id/b_taskstep_problem"
...
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sidesPadding"
        android:layout_marginEnd="@dimen/sidesPadding"
        android:layout_marginBottom="@dimen/elementPadding"
        android:background="@drawable/rounded_corner_background"
        android:onClick="onProblemClicked"
        android:text="@string/have_problem"
        android:textSize="@dimen/p"
        app:backgroundTint="?buttonBarNegativeButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/ll_taskstep_buttongroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

...
