package com.example.simpletasks;


import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.pressImeActionButton;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withContentDescription;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;
import static org.junit.Assert.assertFalse;

import android.content.Context;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import androidx.test.espresso.ViewInteraction;
import androidx.test.ext.junit.rules.ActivityScenarioRule;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.filters.LargeTest;
import androidx.test.platform.app.InstrumentationRegistry;

import com.example.simpletasks.data.entities.Pin;
import com.example.simpletasks.domain.login.User;
import com.example.simpletasks.domain.settings.PinController;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import java.util.concurrent.ExecutionException;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class RemovePinUiTest {

    @Rule
    public ActivityScenarioRule<MainActivity> mActivityScenarioRule =
            new ActivityScenarioRule<>(MainActivity.class);

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }

    @Test
    public void removePinUiTest() throws ExecutionException, InterruptedException {


        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        try {
            Thread.sleep(1000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        final Context context = InstrumentationRegistry.getInstrumentation().getTargetContext();
        final PinController pinController = new PinController(context);

        String pin = "123123";
        pinController.addPin(new Pin(pin)).get();
        User.getUser().logIn();

        ViewInteraction appCompatImageButton = onView(
                allOf(withId(R.id.imageButton), withContentDescription(R.string.open_settings),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                0),
                        isDisplayed()));
        appCompatImageButton.perform(click());

        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        try {
            Thread.sleep(700);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        ViewInteraction materialButton = onView(
                allOf(withId(R.id.removePinButton), withText(R.string.remove_pin),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                4),
                        isDisplayed()));
        materialButton.perform(click());

        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        try {
            Thread.sleep(700);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        ViewInteraction appCompatEditText = onView(
                allOf(withId(R.id.pin_input),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                4),
                        isDisplayed()));
        appCompatEditText.perform(click());

        ViewInteraction pin_input = onView(
                allOf(withId(R.id.pin_input),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                4),
                        isDisplayed()));
        ViewInteraction materialButton2 = onView(
                allOf(withId(R.id.removePinButton), withText(R.string.remove_pin),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                6),
                        isDisplayed()));
        pin_input.perform(replaceText("1337"), closeSoftKeyboard());
        pin_input.perform(pressImeActionButton());
        materialButton2.perform(click());


        final ViewInteraction invalidPinText = onView(allOf(withId(R.id.pin_error), isDisplayed()));

        invalidPinText.check(matches(withText(R.string.invalid_pin)));

        pin_input.perform(replaceText("31337"), closeSoftKeyboard());
        pin_input.perform(pressImeActionButton());
        materialButton2.perform(click());


        final ViewInteraction pinNotFoundText = onView(allOf(withId(R.id.pin_error), isDisplayed()));

        pinNotFoundText.check(matches(withText(R.string.pin_not_found)));

        pin_input.perform(replaceText(pin), closeSoftKeyboard());

        pin_input.perform(pressImeActionButton());
        materialButton2.perform(click());

        ViewInteraction confirmButton = onView(
                allOf(withId(R.id.actionBTN), withText(R.string.accept_info_popup),
                        isDisplayed()));
        confirmButton.perform(click());

        try {
            Thread.sleep(1000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        ViewInteraction acknowledgeButton = onView(
                allOf(withId(R.id.acceptBTN), withText(R.string.accept_info_popup),
                        isDisplayed()));
        acknowledgeButton.perform(click());

        final Boolean doesPinStillExist = pinController.doesPinExist(new Pin(pin)).get();

        assertFalse("the added pin should be removed now", doesPinStillExist);
    }
}
